--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li><a href="./project.html" title="">Project</a></li>
           <li>
             <p>
-              <a href="./components.html" class="btn btn-default navbar-btn" title="">Components</a>
+              <a href="./components.html" class="btn btn-default navbar-btn" title="">Register</a>
             </p>
           </li>
 
@@ -170,7 +170,6 @@ We got you covered, write to us at emergingdragons@gmail.com
       <div class="row section-container-spacer">
         <div class="col-xs-12 col-md-12">
           <h2>Partners</h2>
-          <p>Praesent at feugiat est, at faucibus ipsum. Aenean condimentum mauris vel malesuada pulvinar. <br>Vestibulum sit amet hendrerit leo, quis vehicula mi.</p>
         </div>  
       </div>
       <div class="row">
@@ -231,8 +230,8 @@ We got you covered, write to us at emergingdragons@gmail.com
     <div class="container text-center">
       <div class="row section-container-spacer">
         <div class="col-xs-12 col-md-12">
-          <h2 class="text-center">Customers</h2>
-          <p>Praesent at feugiat est, at faucibus ipsum. Aenean condimentum mauris vel malesuada pulvinar. <br>Vestibulum sit amet hendrerit leo, quis vehicula mi.</p>
+         <!--  <h2 class="text-center">Customers</h2>
+          <p>Praesent at feugiat est, at faucibus ipsum. Aenean condimentum mauris vel malesuada pulvinar. <br>Vestibulum sit amet hendrerit leo, quis vehicula mi.</p> -->
         </div>  
       </div>
       <div class="row">
