--- a/project.html
+++ b/project.html
@@ -46,7 +46,7 @@
           <li><a href="./project.html" title="">Project</a></li>
           <li>
             <p>
-               <a href="./components.html" class="btn btn-default navbar-btn" title="">Register</a>
+               <a href="./components.html" class="btn btn-default navbar-btn" title="">Gallery</a>
                 </p>
           </li>
 
@@ -64,18 +64,17 @@
           <p>
             Some pictures from our moon chaser concept...<br>
             Click on the link to watch the videos
-
           </p>
           <div class="section-container-spacer">
-            <img src="./assets/images/img-06.jpg" alt="" class="img-responsive reveal-content" data-action="zoom">
+            <img src="./assets/images/IMG_9149.jpg" alt="" class="img-responsive reveal-content" data-action="zoom">
           </div>
 
           <div class="row">
             <div class="col-xs-6">
-              <img src="./assets/images/img-04.jpg" alt="" class="img-responsive reveal-content" data-action="zoom">
+              <img src="./assets/images/IMG_9097.jpg" alt="" class="img-responsive reveal-content" data-action="zoom">
             </div>
             <div class="col-xs-6">
-              <img src="./assets/images/img-07.jpg" alt="" class="img-responsive reveal-content" data-action="zoom">
+              <img src="./assets/images/IMG_9101.jpg" alt="" class="img-responsive reveal-content" data-action="zoom">
             </div>
           </div>
        </div>
@@ -111,8 +110,8 @@
             <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
+            <a href="https://www.instagram.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </p>
         </div>
@@ -142,8 +141,8 @@
               <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
-              <a href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
+              <a href="https://www.instagram.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </p>
           </div>
