--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 </head>
 
 
+<link rel="stylesheet" type="text/css" href="style.css">
+
 <body> <!-- Add your content of header -->
 <header>
   <nav class="navbar navbar-default active">
@@ -118,7 +120,7 @@ We got you covered, write to us at emergingdragons@gmail.com
                             <span class="sr-only">Next</span>
                           </a>
                           <p>
-                            Just for the laughs, screams and sudden race. SEE YOU SOON!!! 
+                            Just for the laughs, screams and sudden race. SEE YOU SOON!!!
 
                           <p>
                           </p>
